# easyopenai

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
docs/: DEVELOPMENT.md
src/easyopenai/: __init__.py  client.py  config.py  health.py  logging.py  parser.py  provider.py  scheduler.py  stats.py  stream.py  types.py
tests/: test_config.py  test_fault_injection.py  test_health.py  test_parser.py  test_scheduler_policy.py  test_smoke_real_api.py  test_stream.py
